--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: minima
-title: Je-yi
-description: Đây là GitHub Page cá nhân của Je-yi 
+title: Hoang Ngoc
+description: Đây là GitHub Page cá nhân của Hoang Ngoc 
